# hypothesis-generation-demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prefect  Dockerfile.prolog  Dockerfile.prolog-diagnostic  analysis_tasks.py  api.py  auth.py  compile_kb.py  config.py  db.py  deploy_prefect.py  docker-compose.yml  flows.py  llm.py  logging_config.py  main.py  mock_graph.py  prefect_setup.py  project_tasks.py  pyproject.toml  query_swipl.py  requirements-prefect.txt  requirements.txt  seed_minimal.py  status_tracker.py  summary.py  tasks.py  utils.py
config/: kb.yaml  kb_v3.yaml
db/: project_handler.py
db/state_cache/: stateCache.py
