[project]
name = "hypothesis-generation-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==1.26.4",
    "outlines",
    "Flask",
    "flask-restful>=0.3.10",
    "gseapy",
    "faiss-cpu",
    "python-dotenv",
    "PyJWT==2.9.0",
    "pymongo",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers",
    "llama_index",
    "llama-index-llms-anthropic",
    "pengines",
    "flask-cors>=4.0.0",
    "prefect",
    "flask-socketio>=5.5.0",
    "eventlet>=0.33",
    "python-socketio",
    "Flask-JWT-Extended==4.6.0",
    "loguru",
    "requests",
    "gwaslab",
    "cyvcf2",
    "polars",
    "websocket-client",
    "optuna",
    "tzlocal",
    "pandas",
    "PyYAML",
    "psutil",
    "rpy2",
    "redis>=5.0.0,<7.0.0",
    "google-generativeai>=0.8.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"